fix: Тест с nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name  localhost;
+    server_name dev.xn--80aaa7acgda9a9a.xn--80asehdb;
 
     root /usr/share/nginx/html;
 
